refatoração, correção data invertida